back to white. text changes.

--- a/templates/index.html
+++ b/templates/index.html
@@ -68,7 +68,7 @@
         <div id="g_id_signin" class="g_id_signin" style="background-color:green;" >Post Listing Test</div>
         -->
         <a href="/listings">
-          <button type="button" class="sell-button" id="postListingsButton">Post Listing</button>
+          <button type="button" class="sell-button" id="postListingsButton">Buy or Sell a Swipe</button>
         </a>
       </div>
       <div class="tables-container">
