--- a/templates/listings.html
+++ b/templates/listings.html
@@ -129,7 +129,7 @@
       </header>
       <div class="back-button-container">
         <a href="/">
-          <button type="button" class="sell-button">Back to Swipe Market</button>
+          <button type="button" class="sell-button">Back to Home</button>
         </a>
       </div>
       <div class="terms-of-service">
