--- a/static/general.css
+++ b/static/general.css
@@ -1,6 +1,6 @@
 body {
-  background-color: #121212;
-  color: #e0e0e0;
+  background-color: #FFFFFF;
+  color: #000000;
   margin: 0;
   padding: 0;
   font-family: 'Poppins', sans-serif;
@@ -13,7 +13,7 @@ div{
   
   a{
     text-decoration: none;
-    color: #e0e0e0;
+    color: #000000;
     transition: all 0.2s ease;
   }
   
