--- a/templates/index.html
+++ b/templates/index.html
@@ -63,6 +63,17 @@
       <header class="header" id="index-header">
         <a href="/">Swipe Market &#128722;</a> 
       </header>
+      <div class="terms-of-service">
+        <!--<h2 style="text-align: center;">How it Works</h2>-->
+        <p style="line-height: 1.6; text-align: justify;">
+          Swipe Market lets students pay other students to swipe them 
+          into Columbia and Barnard dining halls. Fill out our “buy or sell a 
+          swipe” form to let other students contact you, or hit the contact 
+          button on a listing below to get an email sent to both you and the 
+          listing’s owner. Once we put you in contact with your buyer/seller, 
+          it’s up to you to coordinate a meeting and exchange payment details.
+        </p>
+      </div>
       <div class="sell-button-container">
         <!--
         <div id="g_id_signin" class="g_id_signin" style="background-color:green;" >Post Listing Test</div>
