--- a/templates/listings.html
+++ b/templates/listings.html
@@ -72,24 +72,17 @@
         display: flex;
         gap: 10px;
         margin-top: 20px;
+        justify-content: center;
       }
       
       .sell-button, .buy-button {
+        background-color: #1a73e8;
+        color: white;
         padding: 10px 20px;
         font-size: 16px;
         cursor: pointer;
         border-radius: 5px;
         border: none;
-      }
-      
-      .sell-button {
-        background-color: #4CAF50;
-        color: white;
-      }
-      
-      .buy-button {
-        background-color: #2196F3;
-        color: white;
       }
     </style>
   </head>
@@ -239,8 +232,8 @@
             <input type="hidden" name="poster_email" id="poster_email" value="">
             
             <div class="form-group button-group">
-              <button type="submit" class="sell-button" formaction="/submit_seller">Sell</button>
-              <button type="submit" class="buy-button" formaction="/submit_buyer">Buy</button>
+              <button type="submit" class="sell-button" formaction="/submit_seller">Offer toSell</button>
+              <button type="submit" class="buy-button" formaction="/submit_buyer">Offer to Buy</button>
             </div>
           </form>
         </div>
