--- a/static/swipemarket.css
+++ b/static/swipemarket.css
@@ -366,7 +366,7 @@
     display: block;
     margin-bottom: 8px;
     font-weight: 500;
-    color: #e0e0e0;
+    color: #000000;
   }
 
   .checkbox-group {
