--- a/static/swipemarket.css
+++ b/static/swipemarket.css
@@ -386,7 +386,7 @@
 
   .checkbox-item input[type="checkbox"] {
     margin-right: 10px;
-    accent-color: #1a73e8;
+    accent-color: #FFFFFF;
     background-color: #121212;
     border: 1px solid #444;
     appearance: none;
