--- a/static/swipemarket.css
+++ b/static/swipemarket.css
@@ -96,8 +96,9 @@
     box-shadow: none;
     color: #000000;
     line-height: 1.4;
-    font-size: 0.7rem;
+    font-size: 0.8rem;
     font-style: italic;
+    margin-bottom: 0;
   }
   
   .buy-button {
@@ -126,6 +127,7 @@
     flex-wrap: wrap;
     gap: 30px;
     padding: 0 20px;
+    margin-top: 10px;
   }
   
   .tables-container > table {
