--- a/static/header.css
+++ b/static/header.css
@@ -55,7 +55,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
+    align-items: start;
     padding: 20px 40px;
     position: static;
     z-index: 1000;
