--- a/templates/index.html
+++ b/templates/index.html
@@ -80,7 +80,7 @@
       </div>
       <div class="tables-container">
       <table>
-        <caption>Swipes People Will Sell to You</caption>
+        <caption>Get Swiped In</caption>
         <thead>
           <tr>
             <th>Dining Hall(s)</th>
@@ -119,7 +119,7 @@
         </tbody>
       </table>
       <table>
-        <caption>Swipes People Will Buy From You</caption>
+        <caption>Swipe Someone Else In</caption>
         <thead>
           <tr>
             <th>Dining Hall(s)</th>
