--- a/static/header.css
+++ b/static/header.css
@@ -63,15 +63,15 @@
   
   .top-right {
     display: flex;
-    flex-direction: column;
-    align-items: flex-end;
+    flex-direction: row;
     font-size: 16px;
+    gap: 20px;
   }
   
   .feedback {
     text-decoration: underline;
     margin-top: 5px;
-    color: #4285f4;
+    color: black;
     transition: all 0.2s ease;
   }
   
