--- a/templates/index.html
+++ b/templates/index.html
@@ -44,9 +44,12 @@
       <p id="output"></p>
       <div class="top">
         <div class="top-left">
+          <div id="current-time"></div>
+          <a href="https://liondine.com/" target="_blank">
+            &lt; Lion Dine
+          </a>
         </div>
         <div class="top-right">
-          <div id="current-time"></div>
           <a href="https://forms.gle/7M3JpiJ9RoapZmxF6" target="blank">
             <div class="feedback">Feedback</div>
           </a>
@@ -106,7 +109,7 @@
                       onclick="openForm(this)">Contact Seller</button>
               <!--delete button that only appears to poster-->
               <div class="listing-actions" data-owner-email="{{ listing.seller_email }}">
-                <button onclick="deleteListing('{{ listing.id }}')" class="delete-button">Delete</button>
+                <button onclick="deleteListing('{{ listing.id }}')" class="delete-button">x</button>
                 <button onclick="editListing('{{ listing.id }}')" class="edit-button">Edit</button>
               </div>
             </td>
@@ -144,7 +147,7 @@
                       data-listing-type="buyer" 
                       onclick="openForm(this)">Contact Buyer</button>
               <div class="listing-actions" data-owner-email="{{ listing.buyer_email }}">
-                <button onclick="deleteListing('{{ listing.id }}')" class="delete-button">Delete</button>
+                <button onclick="deleteListing('{{ listing.id }}')" class="delete-button">x</button>
                 <button onclick="editListing('{{ listing.id }}')" class="edit-button">Edit</button>
               </div>
             </td>
