--- a/static/header.css
+++ b/static/header.css
@@ -69,15 +69,22 @@
   }
   
   .feedback {
-    text-decoration: underline;
-    margin-top: 5px;
+    background-color: white;
     color: black;
+    padding: 8px 16px;
+    border: 1px solid black;
+    border-radius: 4px;
+    font-size: 14px;
+    font-weight: 500;
+    text-decoration: none;
+    height: 40px;
+    box-sizing: border-box;
     transition: all 0.2s ease;
   }
   
   .feedback:hover {
     color: #5a95f5;
-    text-decoration: none;
+    border-color: #5a95f5;
   }
   
   .contest {
