--- a/templates/edit_listing.html
+++ b/templates/edit_listing.html
@@ -39,8 +39,8 @@
         </div>
         <div class="top-right">
           <div id="current-time"></div>
-          <a href="https://forms.gle/7M3JpiJ9RoapZmxF6" target="blank">
-            <div class="feedback">Feedback</div>
+          <a href="https://forms.gle/7M3JpiJ9RoapZmxF6" target="blank" class="feedback">
+            Feedback
           </a>
           <div id="g_id_signin" class="g_id_signin" data-type="standard"></div>
           <div id="profile-menu" class="profile-menu">
