--- a/templates/index.html
+++ b/templates/index.html
@@ -50,8 +50,8 @@
           </a>
         </div>
         <div class="top-right">
-          <a href="https://forms.gle/7M3JpiJ9RoapZmxF6" target="blank">
-            <div class="feedback">Feedback</div>
+          <a href="https://forms.gle/7M3JpiJ9RoapZmxF6" target="blank" class="feedback">
+            Feedback
           </a>
           <div id="g_id_signin" class="g_id_signin" data-type="standard"></div>
           <div id="profile-menu" class="profile-menu" style="display: none;">
@@ -74,11 +74,11 @@
       <div class="terms-of-service">
         <p style="line-height: 1.6; text-align: justify;">
           Swipe Market lets students pay other students to swipe them 
-          into Columbia and Barnard dining halls. Fill out our “buy or sell a 
-          swipe” form to let other students contact you, or hit the contact 
+          into Columbia and Barnard dining halls. Fill out our "buy or sell a 
+          swipe" form to let other students contact you, or hit the contact 
           button on a listing below to get an email sent to both you and the 
-          listing’s owner. Once we put you in contact with your buyer/seller, 
-          it’s up to you to coordinate a meeting and exchange payment details.
+          listing's owner. Once we put you in contact with your buyer/seller, 
+          it's up to you to coordinate a meeting and exchange payment details.
         </p>
       </div>
       <div class="tables-container">
