--- a/templates/index.html
+++ b/templates/index.html
@@ -110,7 +110,7 @@
               <!--delete button that only appears to poster-->
               <div class="listing-actions" data-owner-email="{{ listing.seller_email }}">
                 <button onclick="deleteListing('{{ listing.id }}')" class="delete-button">x</button>
-                <button onclick="editListing('{{ listing.id }}')" class="edit-button">Edit</button>
+                <button onclick="editListing('{{ listing.id }}', 'seller')" class="edit-button">Edit</button>
               </div>
             </td>
           </tr>
@@ -148,7 +148,7 @@
                       onclick="openForm(this)">Contact Buyer</button>
               <div class="listing-actions" data-owner-email="{{ listing.buyer_email }}">
                 <button onclick="deleteListing('{{ listing.id }}')" class="delete-button">x</button>
-                <button onclick="editListing('{{ listing.id }}')" class="edit-button">Edit</button>
+                <button onclick="editListing('{{ listing.id }}', 'buyer')" class="edit-button">Edit</button>
               </div>
             </td>
           </tr>
