--- a/templates/index.html
+++ b/templates/index.html
@@ -76,7 +76,7 @@
           Swipe Market lets students pay other students to swipe them 
           into Columbia and Barnard dining halls. Fill out our "buy or sell a 
           swipe" form to let other students contact you, or hit the contact 
-          button on a listing below to get an email sent to both you and the 
+          button on a listing below to have an email sent to both you and the 
           listing's owner. Once we put you in contact with your buyer/seller, 
           it's up to you to coordinate a meeting and exchange payment details.
         </p>
