--- a/templates/edit_listing.html
+++ b/templates/edit_listing.html
@@ -125,7 +125,7 @@
                     </div>
                     <div class="form-group">
                         <label for="price">Price in dollars:</label>
-                        <input type="number" id="price" name="price" step="0.01" value="{{ listing.price }}" required>
+                        <input type="number" id="price" name="price" min="0" step="0.01" value="{{ listing.price }}" required>
                     </div>
                     <div class="form-group">
                         <label>Payment Methods:</label>
