--- a/templates/listings.html
+++ b/templates/listings.html
@@ -69,6 +69,10 @@
               <label>Dining hall:</label>
               <div class="checkbox-group">
                 <div class="checkbox-item">
+                  <input type="checkbox" id="any" name="dining_hall[]" value="Any">
+                  <label for="any">Any</label>
+                </div>
+                <div class="checkbox-item">
                   <input type="checkbox" id="john_jay" name="dining_hall[]" value="John Jay">
                   <label for="john_jay">John Jay</label>
                 </div>
