--- a/static/swipemarket.css
+++ b/static/swipemarket.css
@@ -353,7 +353,7 @@
 
   /* Style for read-only inputs */
   input[readonly] {
-    background-color: #f5f5f5;
+    background-color: #666666;
     color: #666666;
     cursor: not-allowed;
     border: 1px solid #e0e0e0;
