add new js file for sorting

--- a/templates/edit_listing.html
+++ b/templates/edit_listing.html
@@ -3,6 +3,7 @@
 <head>
     <title>Edit Listing</title>
     <script src="../static/functions.js"></script>
+    <script src="../static/signin.js"></script>
     <link rel="stylesheet" href="../static/header.css">
     <link rel="stylesheet" href="../static/general.css">
     <link rel="stylesheet" href="../static/swipemarket.css">
