--- a/templates/profile.html
+++ b/templates/profile.html
@@ -175,6 +175,7 @@
     </main>
     <script src="https://cdn.jsdelivr.net/npm/jwt-decode@3.1.2/build/jwt-decode.min.js"></script>
     <script src="../static/functions.js" type="text/javascript"></script>
+    <script src="../static/signin.js" type="text/javascript"></script>
     <script>
       document.addEventListener('DOMContentLoaded', function() {
         // Get banned words list from server
