--- a/templates/index.html
+++ b/templates/index.html
@@ -175,8 +175,10 @@
     <div class="footer"><p></p></div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/jwt-decode@3.1.2/build/jwt-decode.min.js"></script>
-    <script src="../static/functions.js" type="text/javascript"></script>
-    <script src="../static/signin.js" type="text/javascript"></script>
+    <script src="../static/utility.js"></script>
+    <script src="../static/signin.js"></script>
+    <script src="../static/formlogic.js"></script>
+    <script src="../static/listingslogic.js"></script>
     <div id="popup" class="form-popup">
         <div class="form-container">
             <p id="popup-message">Connection email sent! Check your inbox</p>
