--- a/templates/profile.html
+++ b/templates/profile.html
@@ -174,8 +174,10 @@
       <div class="footer"><p></p></div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/jwt-decode@3.1.2/build/jwt-decode.min.js"></script>
-    <script src="../static/functions.js" type="text/javascript"></script>
-    <script src="../static/signin.js" type="text/javascript"></script>
+    <script src="../static/utility.js"></script>
+    <script src="../static/signin.js"></script>
+    <script src="../static/formlogic.js"></script>
+    <script src="../static/listingslogic.js"></script>
     <script>
       document.addEventListener('DOMContentLoaded', function() {
         // Get banned words list from server
