--- a/templates/index.html
+++ b/templates/index.html
@@ -76,8 +76,8 @@
           Swipe Market lets students pay other students to swipe them 
           into Columbia and Barnard dining halls. Fill out our "buy or sell a 
           swipe" form to let other students contact you, or hit the contact 
-          button on a listing below to get an email sent to both you and the 
-          listing's owner. Once we put you in contact with your buyer/seller, 
+          button on a listing below to have an email sent to both you and the 
+          listing's owner. Once we put you in touch with your buyer/seller, 
           it's up to you to coordinate a meeting and exchange payment details.
         </p>
       </div>
@@ -175,7 +175,10 @@
     <div class="footer"><p></p></div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/jwt-decode@3.1.2/build/jwt-decode.min.js"></script>
-    <script src="../static/functions.js" type="text/javascript"></script>
+    <script src="../static/utility.js"></script>
+    <script src="../static/signin.js"></script>
+    <script src="../static/formlogic.js"></script>
+    <script src="../static/listingslogic.js"></script>
     <div id="popup" class="form-popup">
         <div class="form-container">
             <p id="popup-message">Connection email sent! Check your inbox</p>
