--- a/templates/index.html
+++ b/templates/index.html
@@ -77,7 +77,7 @@
           into Columbia and Barnard dining halls. Fill out our "buy or sell a 
           swipe" form to let other students contact you, or hit the contact 
           button on a listing below to have an email sent to both you and the 
-          listing's owner. Once we put you in touch with your buyer/seller, 
+          listing's owner. Once we put you in contact with your buyer/seller, 
           it's up to you to coordinate a meeting and exchange payment details.
         </p>
       </div>
