--- a/templates/edit_listing.html
+++ b/templates/edit_listing.html
@@ -2,10 +2,8 @@
 <html>
 <head>
     <title>Edit Listing</title>
-    <script src="../static/utility.js"></script>
+    <script src="../static/functions.js"></script>
     <script src="../static/signin.js"></script>
-    <script src="../static/formlogic.js"></script>
-    <script src="../static/listingslogic.js"></script>
     <link rel="stylesheet" href="../static/header.css">
     <link rel="stylesheet" href="../static/general.css">
     <link rel="stylesheet" href="../static/swipemarket.css">
