--- a/templates/edit_listing.html
+++ b/templates/edit_listing.html
@@ -21,6 +21,62 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-D26R1LF247"></script>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <div id="g_id_onload" data-client_id="362313378422-s5g6ki5lkph6vaeoad93lfirrtugvnfl.apps.googleusercontent.com" data-callback="handleCredentialResponse" data-auto_prompt="false">
+    <style>
+        .profile-menu {
+            position: relative;
+            display: inline-block;
+        }
+        
+        .profile-menu img {
+            width: 35px;
+            height: 35px;
+            border-radius: 50%;
+            cursor: pointer;
+            transition: opacity 0.3s;
+        }
+        
+        .profile-menu img:hover {
+            opacity: 0.8;
+        }
+        
+        .profile-dropdown {
+            display: none;
+            position: absolute;
+            right: 0;
+            background-color: white;
+            min-width: 150px;
+            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+            z-index: 1;
+            border-radius: 4px;
+            padding: 5px 0;
+        }
+        
+        .profile-menu.active .profile-dropdown {
+            display: block;
+        }
+        
+        .profile-dropdown button, .profile-dropdown a button {
+            width: 100%;
+            padding: 10px 15px;
+            text-align: left;
+            background: none;
+            border: none;
+            cursor: pointer;
+            font-size: 14px;
+            color: #333;
+            transition: background-color 0.3s;
+        }
+        
+        .profile-dropdown button:hover, .profile-dropdown a button:hover {
+            background-color: #f1f1f1;
+        }
+        
+        .profile-dropdown a {
+            display: block;
+            text-decoration: none;
+            color: inherit;
+        }
+    </style>
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-V549ZYC27J"></script>
@@ -30,7 +86,7 @@
   gtag('js', new Date());
 
   gtag('config', 'G-V549ZYC27J');
-</script>
+</script>    
 <body>
     <main>
         <p id="output"></p>
@@ -66,6 +122,10 @@
                         <label>Dining hall:</label>
                         <div class="checkbox-group">
                             {% set selected_halls = listing.dining_hall.split(', ') %}
+                            <div class="checkbox-item">
+                                <input type="checkbox" id="any" name="dining_hall[]" value="Any"  {% if "John Jay" in selected_halls %}checked{% endif %}>
+                                <label for="any">Any</label>
+                              </div>
                             <div class="checkbox-item">
                                 <input type="checkbox" id="john_jay" name="dining_hall[]" value="John Jay" {% if "John Jay" in selected_halls %}checked{% endif %}>
                                 <label for="john_jay">John Jay</label>
@@ -126,7 +186,7 @@
                     </div>
                     <div class="form-group">
                         <label for="price">Price in dollars:</label>
-                        <input type="number" id="price" name="price" step="0.01" value="{{ listing.price }}" required>
+                        <input type="number" id="price" name="price" min="0" step="0.01" value="{{ listing.price }}" required>
                     </div>
                     <div class="form-group">
                         <label>Payment Methods:</label>
