--- a/templates/edit_listing.html
+++ b/templates/edit_listing.html
@@ -20,6 +20,7 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-D26R1LF247"></script>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <div id="g_id_onload" data-client_id="362313378422-s5g6ki5lkph6vaeoad93lfirrtugvnfl.apps.googleusercontent.com" data-callback="handleCredentialResponse" data-auto_prompt="false">
+    </div>
     <style>
         .profile-menu {
             position: relative;
