--- a/templates/index.html
+++ b/templates/index.html
@@ -128,7 +128,7 @@
             <th>Dining Hall(s)</th>
             <th>Date</th>
             <th>Time</th>
-            <th>Price</th>
+            <th>Compensation</th>
             <th>Payment Methods</th>
             <th>Contact Buyer</th>
           </tr>
