how it works popup

--- a/templates/index.html
+++ b/templates/index.html
@@ -70,16 +70,19 @@
         <a href="/listings">
           <button type="button" class="sell-button" id="postListingsButton">Buy or Sell a Swipe</button>
         </a>
+        <button type="button" class="how-it-works-button" id="howItWorksButton">How it works</button>
       </div>
-      <div class="terms-of-service">
-        <p style="line-height: 1.6; text-align: justify;">
-          Swipe Market lets students pay other students to swipe them 
-          into Columbia and Barnard dining halls. Fill out our "buy or sell a 
-          swipe" form to let other students contact you, or hit the contact 
-          button on a listing below to have an email sent to both you and the 
-          listing's owner. Once we put you in touch with your buyer/seller, 
-          it's up to you to coordinate a meeting and exchange payment details.
-        </p>
+      <div class="how-it-works-popup" id="howItWorksPopup">
+        <div class="how-it-works-content">
+          <p style="line-height: 1.6; text-align: justify;">
+            Swipe Market lets students pay other students to swipe them 
+            into Columbia and Barnard dining halls. Fill out our "buy or sell a 
+            swipe" form to let other students contact you, or hit the contact 
+            button on a listing below to have an email sent to both you and the 
+            listing's owner. Once we put you in touch with your buyer/seller, 
+            it's up to you to coordinate a meeting and exchange payment details.
+          </p>
+        </div>
       </div>
       <div class="tables-container">
       <table>
