--- a/templates/edit_listing.html
+++ b/templates/edit_listing.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8" />
     <title>Edit Listing</title>
     <script src="../static/functions.js"></script>
     <link rel="stylesheet" href="../static/header.css">
