you'll pay / you'll earn

--- a/templates/index.html
+++ b/templates/index.html
@@ -92,7 +92,7 @@
             <th>Dining Hall(s)</th>
             <th>Date</th>
             <th>Time</th>
-            <th>Price</th>
+            <th>You'll Pay</th>
             <th>Payment Methods</th>
             <th>Contact Seller</th>
           </tr>
@@ -131,7 +131,7 @@
             <th>Dining Hall(s)</th>
             <th>Date</th>
             <th>Time</th>
-            <th>Compensation</th>
+            <th>You'll Earn</th>
             <th>Payment Methods</th>
             <th>Contact Buyer</th>
           </tr>
