--- a/templates/index.html
+++ b/templates/index.html
@@ -70,7 +70,7 @@
         <a href="/listings">
           <button type="button" class="sell-button" id="postListingsButton">Buy or Sell a Swipe</button>
         </a>
-        <button type="button" class="how-it-works-button" id="howItWorksButton">How it works</button>
+        <button type="button" class="how-it-works-button" id="howItWorksButton">How it Works</button>
       </div>
       <div class="how-it-works-popup" id="howItWorksPopup">
         <div class="how-it-works-content">
