changed button name

--- a/templates/index.html
+++ b/templates/index.html
@@ -68,7 +68,7 @@
       </header>
       <div class="sell-button-container">
         <a href="/listings">
-          <button type="button" class="sell-button" id="postListingsButton">Buy or Sell a Swipe</button>
+          <button type="button" class="sell-button" id="postListingsButton">Create a New Listing</button>
         </a>
         <button type="button" class="how-it-works-button" id="howItWorksButton">How it works</button>
       </div>
