listings header updated

--- a/templates/listings.html
+++ b/templates/listings.html
@@ -60,7 +60,7 @@
         </div>
       </div>
       <header class="header" id="index-header">
-        <a href="/listings">Buy or Sell a Swipe</a> 
+        <a href="/listings">Create a New Listing</a> 
       </header>
       <section style="max-width: 800px; margin: 20px auto; padding: 20px;">
         <div class="seller-form">
