--- a/templates/listings.html
+++ b/templates/listings.html
@@ -65,7 +65,7 @@
       </header>
       <section style="max-width: 800px; margin: 20px auto; padding: 20px;">
         <div class="seller-form">
-          <form action="/submit_seller" method="POST">
+          <form id="listingForm" action="/submit_seller" method="POST">
             <div class="form-group">
               <label>Dining hall:</label>
               <div class="checkbox-group">
