--- a/static/swipemarket.css
+++ b/static/swipemarket.css
@@ -51,7 +51,9 @@
   }
 
   .how-it-works-button {
-    background-color: #8c3dbe;
+    background-color: white;
+    color: #1a73e8;
+    border: 1px solid #1a73e8;
   }
 
   .sell-button {
@@ -77,7 +79,7 @@
   }
 
   .how-it-works-button:hover {
-    background-color: #9b4cc7;
+    color: #2b7de9;
     transform: translateY(-2px);
     box-shadow: 0 6px 12px rgba(66, 133, 244, 0.4);
   }
