--- a/static/swipemarket.css
+++ b/static/swipemarket.css
@@ -82,6 +82,7 @@
     color: #2b7de9;
     transform: translateY(-2px);
     box-shadow: 0 6px 12px rgba(66, 133, 244, 0.4);
+    background-color: white;
   }
 
   .how-it-works-popup {
