--- a/static/phonestyles.css
+++ b/static/phonestyles.css
@@ -24,7 +24,7 @@
     }
 
     .header {
-        font-size: 22px; /* Reduced from 28px */
+        font-size: 26px;
         letter-spacing: 1px;
         padding: 0 10px;
       }
