--- a/templates/index.html
+++ b/templates/index.html
@@ -113,7 +113,7 @@
                       onclick="openForm(this)">Get This Swipe</button>
               <!--delete button that only appears to poster-->
               <div class="listing-actions" data-owner-email="{{ listing.seller_email }}">
-                <button onclick="deleteListing('{{ listing.id }}', 'seller')" class="delete-button">x</button>
+                <button onclick="deleteListing('{{ listing.id }}', 'seller')" class="delete-button">X</button>
                 <button onclick="editListing('{{ listing.id }}', 'seller')" class="edit-button">Edit</button>
               </div>
             </td>
@@ -151,7 +151,7 @@
                       data-listing-type="buyer" 
                       onclick="openForm(this)">Swipe Them In</button>
               <div class="listing-actions" data-owner-email="{{ listing.buyer_email }}">
-                <button onclick="deleteListing('{{ listing.id }}', 'buyer')" class="delete-button">x</button>
+                <button onclick="deleteListing('{{ listing.id }}', 'buyer')" class="delete-button">X</button>
                 <button onclick="editListing('{{ listing.id }}', 'buyer')" class="edit-button">Edit</button>
               </div>
             </td>
